Bamadeb- : Slide no-29

--- a/templates/followingcompany.html
+++ b/templates/followingcompany.html
@@ -88,9 +88,8 @@ td
 
     <div id="following" class="tab-pane fade ">
     <div ng-if="user_following_company_list.length < 1">
-      <p style="margin:0px;">Sorry - we’ll keep looking. 
-Your desired criteria does not pop up as often as others, so we don't currently have any new matches for you. We will keep you posted!</p>
-<p style="margin:0px;">Hint - <a href="#!/user/profile//">Customize your profile! Add employment locations and industry experience to increase matches.</a></p>
+      <p style="margin:0px;">Follow companies! Gain exposure to their hiring team and give priority to their posts.</p>
+<p style="margin:0px;">Hint - <a href="#!/user/profile//">Customize your profile to make a stronger first impression!</a></p>
     </div> 
      
         <div class="row">
@@ -153,7 +152,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
     </div>
     <div id="following_me" class="tab-pane fade">
     <div ng-if="company_following_user_list.length < 1">
-       <p style="margin:0px;">Follow companies! Gain exposure to their hiring team and give priority to their posts</p>
+       <p style="margin:0px;">Once you follow a company they can follow you back.</p>
 <p style="margin:0px;">Hint - <a href="#!/user/profile//">Customize your profile to make a stronger first impression!</a></p>
     </div>  
         <div class="row">
@@ -221,8 +220,9 @@ Your desired criteria does not pop up as often as others, so we don't currently 
     <div id="notviewed" class="tab-pane fade">
    
     <div ng-if="not_viewed_company_for_user_list.length < 1 ">
-      <p style="margin:0px;">Once you follow a company they can follow you back</p>
-<p style="margin:0px;">Hint - <a href="#!/user/profile//">Customize your profile to make a stronger first impression! </a></p>
+      <p style="margin:0px;">Sorry - we’ll keep looking. Your desired criteria does not pop up as often as others, so we don't currently have any new matches for you. We will keep you posted!
+</p>
+<p style="margin:0px;">Hint - <a href="#!/user/profile//">Customize your profile! Add employment locations and industry experience to increase matches </a></p>
     </div>  
     
         <div class="row">
