Bamadeb : “Suggested Jobs” sub section blue and bold to make them more noticeable

--- a/templates/user_job_match.html
+++ b/templates/user_job_match.html
@@ -78,76 +78,10 @@ span.itemPrice {
    <!-- <div ng-if="matching_jobs_for_user_list.length < 1 ">
       <p>Nothing to Show</p>
     </div>--> 
-    <div> Suggested Jobs - Following </div>
-    
-    <div class="row">
-    <div ng-if="matching_jobs_for_user_list.length == '0' && matching_jobs_for_user_unfollow_list.length == '0'"> 
-    <p style="margin:0px;    margin-left: 15px;">Sorry - we’ll keep looking. 
-Your desired criteria does not pop up as often as others, so we don't currently have any new matches for you. We will keep you posted!
-</p>
-<p style="margin:0px;    margin-left: 15px;">Hint - <a href="#!/user/profile//">Customize your profile! Add employment locations and industry experience to increase matches.</a></p>
-</div>
-    	
-        	 <div id="matching{{jobs.jobpost_id}}" class="col-md-6" ng-repeat="jobs in matching_jobs_for_user_list" >				
-                        <div class="panel panel-default  panel--styled">
-                            <div class="panel-body">
-                                <div class="col-md-12 panelTop" >	
-                                    <div class="col-md-4">	
-                                        <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
-                                    </div>
-                                    <div class="col-md-8" style="height:130px;">	
-                                        <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
-                                        <span><strong> {{jobs.company_name}} </strong>| </span><br />
-                                        <span>{{jobs.job_post_date_only}} </span><br />
-
-                                        <span>{{jobs.country_name}}, {{jobs.state_name}}, {{jobs.city_name}} </span>
-                                                
-                                </div>
-                               <!-- <div hm-read-more hm-text="{{company.full_com_desc | filter: query | limitTo:850}}"></div>-->
-                                <div class="col-md-12" style="min-height:180px;">	
-                                 <!--  <p hm-read-more
-                                    hm-text=" {{jobs.jobpost_description}} " 
-                                    hm-limit="250" 
-                                    hm-more-text=" more" 
-                                    hm-less-text=" less"
-                                    hm-dots-class="dots"
-                                    hm-link-class="links">
-                                  </p> -->
-                                   <div>{{jobs.jobpost_description | limitTo:250}}</div><span ng-if="jobs.jobpost_description != '' " style="color: #008cc9" ng-click="view_a_job_for_user( jobs.jobpost_id,'myjobs')">more</span>
-                                </div>
-                                                            
-                                <div class="col-xs-12 panelBottom">
-                                
-                                    <div class="col-xs-4 text-center">
-                                        <button type="button" class="btn btn-success "  ng-click="view_a_job_for_user( jobs.jobpost_id,'myjobs')">View </button>					
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                    
-                                        <button type="button" class="btn btn-warning "  ng-click="save_a_job_for_user( jobs.jobpost_id )"> Save </button>
-                                                                
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                    
-                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id )"><i class="fa fa-user"> </i> Apply </button>
-                                                                
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    
-                    
-                    
-                </div>
-        
-        
-      
-    </div>  
+   
       
       
-       <div> Suggested Jobs – Not Following </div><br><br>
+       <div class="blue"> <b>Suggested Jobs – Not Following </b></div> 
       
 
     <div class="row"> 
@@ -208,6 +142,74 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                     
                     
                 </div>
+      
+    </div>  
+
+     <div class="blue"><b> Suggested Jobs - Following </b></div><br>
+    
+    <div class="row">
+    <div ng-if="matching_jobs_for_user_list.length == '0' && matching_jobs_for_user_unfollow_list.length == '0'"> 
+    <p style="margin:0px;    margin-left: 15px;">Sorry - we’ll keep looking. 
+Your desired criteria does not pop up as often as others, so we don't currently have any new matches for you. We will keep you posted!
+</p>
+<p style="margin:0px;    margin-left: 15px;">Hint - <a href="#!/user/profile//">Customize your profile! Add employment locations and industry experience to increase matches.</a></p>
+</div>
+        
+             <div id="matching{{jobs.jobpost_id}}" class="col-md-6" ng-repeat="jobs in matching_jobs_for_user_list" >               
+                        <div class="panel panel-default  panel--styled">
+                            <div class="panel-body">
+                                <div class="col-md-12 panelTop" >   
+                                    <div class="col-md-4">  
+                                        <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
+                                    </div>
+                                    <div class="col-md-8" style="height:130px;">    
+                                        <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
+                                        <span><strong> {{jobs.company_name}} </strong>| </span><br />
+                                        <span>{{jobs.job_post_date_only}} </span><br />
+
+                                        <span>{{jobs.country_name}}, {{jobs.state_name}}, {{jobs.city_name}} </span>
+                                                
+                                </div>
+                               <!-- <div hm-read-more hm-text="{{company.full_com_desc | filter: query | limitTo:850}}"></div>-->
+                                <div class="col-md-12" style="min-height:180px;">   
+                                 <!--  <p hm-read-more
+                                    hm-text=" {{jobs.jobpost_description}} " 
+                                    hm-limit="250" 
+                                    hm-more-text=" more" 
+                                    hm-less-text=" less"
+                                    hm-dots-class="dots"
+                                    hm-link-class="links">
+                                  </p> -->
+                                   <div>{{jobs.jobpost_description | limitTo:250}}</div><span ng-if="jobs.jobpost_description != '' " style="color: #008cc9" ng-click="view_a_job_for_user( jobs.jobpost_id,'myjobs')">more</span>
+                                </div>
+                                                            
+                                <div class="col-xs-12 panelBottom">
+                                
+                                    <div class="col-xs-4 text-center">
+                                        <button type="button" class="btn btn-success "  ng-click="view_a_job_for_user( jobs.jobpost_id,'myjobs')">View </button>                    
+                                    </div>
+                                    <div class="col-xs-4 text-center">
+                                    
+                                        <button type="button" class="btn btn-warning "  ng-click="save_a_job_for_user( jobs.jobpost_id )"> Save </button>
+                                                                
+                                    </div>
+                                    <div class="col-xs-4 text-center">
+                                    
+                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id )"><i class="fa fa-user"> </i> Apply </button>
+                                                                
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    
+                    
+                </div>
+        
+        
       
     </div>  
       
