Bamadeb  : The apply button should link to the company website.

--- a/templates/user_job_match.html
+++ b/templates/user_job_match.html
@@ -195,7 +195,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                                     </div>
                                     <div class="col-xs-4 text-center">
                                     
-                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id )"><i class="fa fa-user"> </i> Apply </button>
+                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id,jobs.jobpost_url )"><i class="fa fa-user"> </i> Apply </button>
                                                                 
                                     </div>
                                     
@@ -262,7 +262,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                                     
                                     <div class="col-xs-6 text-center">
                                     
-                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id )">
+                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id,jobs.jobpost_url)">
                                 <i class="fa fa-user"> </i> Apply </button>
                                                                 
                                     </div>
