--- a/templates/postJob.html
+++ b/templates/postJob.html
@@ -285,7 +285,7 @@
                     
                   <div class="form-group">
                       <label for="exampleTextarea" class='control-label'>Add Job Link/URL:</label>
-                      <input type="text" name="url" class="form-control" ng-model="postjobinfo.jobpost_url"  required placeholder="- Add Job Link/URL -" ng-click="getlink(postjobinfo.jobpost_url)">
+                      <input type="text" name="url" class="form-control" ng-model="postjobinfo.jobpost_url"  required placeholder="- Add Job Link/URL -" ng-click="getlink(postjobinfo.jobpost_url)" http-prefix>
                   </div>
                   
                  <div class="form-group" style="margin-bottom: 80px;">                
