--- a/templates/user_job_match.html
+++ b/templates/user_job_match.html
@@ -128,7 +128,7 @@ span.itemPrice {
                                     </div>
                                     <div class="col-xs-4 text-center">
                                     
-                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id ); follow_a_company_for_user( jobs.jobpost_companyid );">
+                                        <button type="button" class="btn btn-primary " ng-click="apply_for_job_user( jobs.jobpost_id,jobs.jobpost_url); follow_a_company_for_user( jobs.jobpost_companyid );">
                                 <i class="fa fa-user"> </i> Apply & Follow </button>
                                                                 
                                     </div>
