--- a/templates/profile.html
+++ b/templates/profile.html
@@ -298,7 +298,7 @@
 <div class="col-lg-9 col-md-9" ng-if="ProfileInfo.users_type == '2' ">
   <div>
     <div align="center">                  
-      <input class="pull-left form-control"  style="width:49%;" type="text" placeholder="Company Name" ng-model="ProfileInfo.company_name" />     
+      <input class="pull-left form-control"  style="width:49%;" type="text" placeholder="Company Name" ng-model="ProfileInfo.company_name" http-prefix />     
 
       <input type="hidden" ng-model="ProfileInfo.users_companyid" />            
     </div>
