--- a/include/topUser.html
+++ b/include/topUser.html
@@ -39,11 +39,13 @@
 					<li><a ng-click="check_jobinfo('#!/user/profile//');">Profile</a></li>
           <!-- href="#!/user/profile//" -->
           <li ng-if="userInfo_type == '1' "><a href="#!/user/message">Message</a></li>
-          <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/companyMessage');">Message</a></li>
+          <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/companyMessage');">Message</a></li>         
+
 					<li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/addusers');">Add Users</a></li>
 					<li ng-if="userInfo_type == '2' "><a ng-click="manage_location()">Post a Job</a></li>
           <li ng-if="userInfo_type == '1' && userInfo_companytype == '1' "><a ng-click="manage_location()">Post a Job</a></li>          
           <li ng-if="userInfo_type == '1' "><a href="#!/user/user-job">View Jobs</a></li>
+          <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/posts ');">Feeds</a></li>
           <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/postjobview/');">View Jobs</a></li>
           <li><a ng-click="check_jobinfo('#!/user/cng-psw');">Change Password</a></li>
 					<li><a ng-click="logout();">Logout</a></li>
@@ -88,7 +90,7 @@
            </tr>
            <tr >
            <td align="center"><a ng-click="check_jobinfo('#!/user/construction');" style="color:#FFF;">Network</a></td>
-           <td align="center"><a ng-click="check_jobinfo('#!/user/construction');" style="color:#FFF;">Feed</a></td>
+           <td align="center"><a ng-click="check_jobinfo('#!/user/posts');" style="color:#FFF;">Feed</a></td>
 
            <td align="center">
            <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;">Mail</a></span>
