--- a/templates/posts.html
+++ b/templates/posts.html
@@ -124,9 +124,8 @@ body
 </style>
 </head>
 
-<section class="container content-section text-center">
+<section class="container content-section text-center"> 
 
- 
   <div class="row">
       <div class="col-md-8 col-md-offset-2">
 
@@ -144,7 +143,7 @@ Software Engineer at Karma Strategies -->
     </div>
 <div class="text_area12">
  
-<textarea ng-model="postdatainfo.post_content" style="width:100%;min-height:80px;border:none;" placeholder="Write here what you have in your mind....">
+<textarea  ng-model="postdatainfo.post_content" style="width:100%;min-height:80px;border:none;" placeholder="Write here what you have in your mind....">
 </textarea>
 <p ng-repeat="file in files" style="margin:0px;">
       {{file.name}}
@@ -187,8 +186,8 @@ Software Engineer at Karma Strategies -->
  
 </div>
 </div>
-<div class="top20" ng-if="datalist.post_content != 'undefined' ">
-	{{datalist.post_content}}
+<div class="top20" ng-if="datalist.post_content != 'undefined' " >
+	<div parse-url="props" ng-model="datalist.txtContent"> </div>
 </div>  
 <!-- <div ng-if="datalist.post_filename == '' "  align="center" style="background-image:url(public/images/picture1.jpg);width:100%;height:300px; background-position:center center;max-width:100%;-webkit-background-size: cover;
   -moz-background-size: cover;
