--- a/templates/postsDetails.html
+++ b/templates/postsDetails.html
@@ -162,21 +162,21 @@ body
 		<div class="content-heading">
 			<div class="left_margin">
 				<strong>{{ProfileInfo.company_name}}</strong>
+				<span style="float: right;">{{datalist.lastactivity}}</span>
     <!--   <br/>
     Software Engineer at Karma Strategies -->
 </div>
 </div>
 </div>
-<div class="top20" ng-if="datalist.post_content != 'undefined' ">
-	{{datalist.post_content}}
+<div class="top20" ng-if="datalist.post_content != 'undefined' ">	 
+	<div parse-url="props" ng-model="datalist.txtContent"></div>
 </div>  
 <!-- <div ng-if="datalist.post_filename == '' "  align="center" style="background-image:url(public/images/picture1.jpg);width:100%;height:300px; background-position:center center;max-width:100%;-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;"></div>
  -->
-  <div ng-if="datalist.post_filename != '' " align="center" style="background-image:url(upload/posts/{{datalist.post_filename}});width:100%;height:300px; background-position:center center; -moz-background-size: cover; 
-  background-size: cover;"></div>
+  <div ng-if="datalist.post_filename != '' " align="center" style="background-image:url(upload/posts/{{datalist.post_filename}});width:100%;height:300px; background-position:center center; -moz-background-size: cover;background-size: cover;"></div>
 
 <div class="line12"></div>
 <div>
