--- a/templates/profile.html
+++ b/templates/profile.html
@@ -568,7 +568,7 @@
           <div class="botton_grey2_text1">Experience We Seek</div>
           <div class="botton_grey2_text2" ng-click="moreTitle(industryList.length,industrylebel,'Industry')">{{industrylebel}}
             <span ng-if="industrylebel != 'Less' && industryCnt != '-1' ">
-             <!--  {{industryCnt}} -->
+              {{industryCnt}}
             </span>
           </div>
           <div style="clear:both;"></div>
@@ -587,8 +587,9 @@
       <div ng-repeat="industry in industryList | filter: query | limitTo:industryLimit">
         <div>
           <div class="blue" style="margin-top: 10px;font-weight: bold;"> 
-            {{industry.industry_name}}
-           <!--  <span style=" float: right; font-weight: normal;">{{industry.level}}</span> -->
+            {{industry.industry_name}} 
+            <span ng-if="industry.area.length == '0' " style=" font-weight: normal; margin-left: 10px;">
+            <a href="#!/user/industry" style="color: blue;">add experience</a></span>
           </div>
           <span ng-repeat="subindustry in industry.area | filter: query | limitTo:subindustryLimit">
             <span>
@@ -896,6 +897,7 @@
                         <img ng-src="{{slide.image}}" style="margin:auto; height: 350px;">                       
                       </slide>
                     </carousel>
+ 
 
                 </div>
               </div>
@@ -905,7 +907,7 @@
 <section class="container" ng-if="to_view_type == 'view' && company_user_matching_criteria.length > 0">
   <div class="row backsection" >
     <div class="col-lg-12" style="color:#008cc9"> 
-	
+  
    <strong> Matching Criteria:</strong> <span ng-repeat="matching_criteria in company_user_matching_criteria" style="color:#333!important;">{{matching_criteria.type_name}} | </span>
 
     </div>
@@ -916,6 +918,4 @@
 <div class="bottom_space"></div>
 
 </div>
-
-
-
+ 
