--- a/templates/posts.html
+++ b/templates/posts.html
@@ -128,6 +128,7 @@ body
 
   <div class="row">
       <div class="col-md-8 col-md-offset-2">
+       <span> <a href="#!/user/profile//" style="color:##008cc9;float: right; font-weight: bold;">Back</a></span>
 
 <div class="box_shadow">
 <div>
